# bit_reverse

./: .travis.yml  Cargo.toml  README  README.md  appveyor.yml  search-index.js
.github/workflows/: rust.yml
benches/: bench.rs  primitives.rs
bit_reverse/: index.html  sidebar-items.js  trait.BitwiseReverse.html  trait.LookupReverse.html  trait.ParallelReverse.html
examples/: u8_reverse.rs
implementors/bit_reverse/: trait.BitwiseReverse.js
src/: bitwise.rs  lib.rs  lookup.rs  macros.rs  parallel.rs  primitives.rs
src/bit_reverse/src/: lib.rs.html
