[package]
name = "bit_reverse"
version = "0.1.5-pre"
authors = ["Eugene Gonzalez <gene@teamtiki.us>"]
description = "Computes the bit reversal of primitive integers."
documentation = "https://eugenegonzalez.github.io/bit_reverse/bit_reverse/index.html"
repository = "https://github.com/EugeneGonzalez/bit_reverse"
readme = "README.md"
keywords = ["bit", "reverse"]
license = "MIT/Apache-2.0"

[features]
default = ["use_std"]
use_std = []

[package.metadata.release]
upload-doc = true