[package]
name = "bit_reverse"
version = "0.1.9-alpha.0"
authors = ["Eugene Gonzalez <eugene.gonzalez44@gmail.com>"]
description = "Computes the bit reversal of primitive integers."
repository = "https://github.com/EugeneGonzalez/bit_reverse"
documentation = "https://docs.rs/bit_reverse"
readme = "README.md"
keywords = ["bit", "swap", "reverse"]
categories = ["no-std"]
license = "MIT/Apache-2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "primitives"
harness = false

[features]
default = ["use_std"]
use_std = []
u128 = []

[badges]
travis-ci = { repository = "EugeneGonzalez/bit_reverse" }
appveyor = { repository = "EugeneGonzalez/bit_reverse" }
